[package]
name = "solve-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.26"
anchor-lang = "0.29.0"
solve = { path="./solve/programs/solve", features = ["no-entrypoint"]}
challenge = { path="../challenge/programs/challenge", features = ["no-entrypoint"]}