[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sol-ctf-framework = { git = "https://github.com/otter-sec/sol-ctf-framework.git", branch = "rewrite-v2"}
solana-program = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
anchor-lang = "0.29.0"
spl-token = "4.0.0"
tokio = "1.43.0"
challenge = {path = "../challenge/programs/challenge", features = ["no-entrypoint"]}
